# evobot_control_system

./: .gitignore  ANALYSIS_SUMMARY.md  CI-README.md  EXECUTABLE_TROUBLESHOOTING.md  QUERY_FREQUENCY_ANALYSIS.md  README.md  build_onefile.bat  build_requirements.txt  build_windows.bat  evobot.spec  evobot_debug.spec  fix-windows-deps.py  install-windows.bat  installer.iss  main.py  main_debug.py  optimize_build.py  pyproject.toml  requirements-windows.txt  startup_optimizer.py  test_pyqt.py  test_pyqt.spec  uv.toml  完整打包说明.md
.github/: README.md  TROUBLESHOOTING.md
config/: auto_saved_parameters.json  calibration_data.yaml  calibration_history.yaml  robot_config.yaml  velocity_control_config.yaml  zero_positions.yaml
docs/: EvoBot控制系统开发执行计划_v1.0.md  EvoBot机器人控制系统技术方案设计文档_v1.0.md  EvoBot机器人控制系统设计文档.md  关节位置标定功能实现计划.md  电流控制设计.md  运动学求解器使用指南.md
examples/: kinematics_demo.py
src/: __init__.py
tests/: debug_received_data.py  debug_serial_connection.py  debug_zero_position.py  simple_button_test.py  start_evobot.py  startup_optimizer.py  test_200ms_query.py  test_config_manager.py  test_data_reception.py  test_fast_startup.py  test_fixed_data_reception.py  test_joint_panel_v2.py  test_kinematics_solver.py  test_protocol_handler.py  test_qt_fix.py  test_qtextcursor_fix.py  test_query_system.py  test_queue_fix.py  test_raw_serial_reception.py  test_recording_fix.py  test_serial_communication_fix.py  test_simple.py  test_simple_zero_panel.py  test_startup_simple.py  test_trajectory_planner.py  test_zero_position.py  test_zero_position_ui_fix.py  test_zero_record_fix.py  (+2 more)
(+45 files in other folders)
